--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ const filteredNavigation = NAVIGATION.filter(item => item.name !== "Kontak").map
         <a href="/" class="flex items-center space-x-3">
           <div class="sm:block">
             <h1 class="text-xl font-bold text-text-main">
-              Jasa Cutting Laser
+              raja cutting laser
             </h1>
             <p class="text-xs text-text-secondary hidden lg:block">Laser Cutting Terpercaya</p>
           </div>
