--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -41,7 +41,7 @@ const breadcrumbSchema = generateBreadcrumbSchema(breadcrumbs);
 ---
 
 <BaseLayout 
-  title={`${post.title} | Blog jasa cutting laser`}
+  title={`${post.title} | Blog raja cutting laser`}
   description={post.excerpt}
   keywords={`${post.title.toLowerCase()}, laser cutting, cnc router, ${post.category.toLowerCase()}`}
   image={post.image}
@@ -108,7 +108,7 @@ const breadcrumbSchema = generateBreadcrumbSchema(breadcrumbs);
             Butuh Bantuan Implementasi?
           </h3>
           <p class="text-blue-100 mb-6">
-            Tim ahli jasa cutting laser siap membantu mewujudkan project Anda dengan teknologi terdepan
+            Tim ahli raja cutting laser siap membantu mewujudkan project Anda dengan teknologi terdepan
           </p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center">
             <a 
