--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -158,3 +158,8 @@ const sizeClasses = getSizeClasses();
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
   }
 </style>
+
+<script>
+  import { addWhatsAppTrackers } from '../utils/tracker.js';
+  addWhatsAppTrackers();
+</script>
