--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -246,3 +246,8 @@
       });
     </script>
   </footer>
+
+<script>
+  import { addWhatsAppTrackers } from '../utils/tracker.js';
+  addWhatsAppTrackers();
+</script>
