--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -453,3 +453,8 @@ const filteredNavigation = NAVIGATION.filter(item => item.name !== "Kontak").map
     }
   }
 </style>
+
+<script>
+  import { addWhatsAppTrackers } from '../utils/tracker.js';
+  addWhatsAppTrackers();
+</script>
