--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -355,3 +355,8 @@ const metaTags = generateMetaTags(seoData) as BaseLayoutProps;
 
   <Footer slot="footer" />
 </BaseLayout>
+
+<script>
+  import { addWhatsAppTrackers } from '../utils/tracker.js';
+  addWhatsAppTrackers();
+</script>
