--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -209,3 +209,8 @@ const {
     transform: translateY(30px);
   }
 </style>
+
+<script>
+  import { addWhatsAppTrackers } from '../utils/tracker.js';
+  addWhatsAppTrackers();
+</script>
