--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -240,3 +240,8 @@ const metaTags = {
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
   }
 </style>
+
+<script>
+  import { addWhatsAppTrackers } from '../utils/tracker.js';
+  addWhatsAppTrackers();
+</script>
