--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -248,6 +248,7 @@
   </footer>
 
 <script>
-  import { addWhatsAppTrackers } from '../utils/tracker.js';
-  addWhatsAppTrackers();
+  import('../utils/tracker.js').then(({ addWhatsAppTrackers }) => {
+    addWhatsAppTrackers();
+  });
 </script>
