--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -211,6 +211,7 @@ const {
 </style>
 
 <script>
-  import { addWhatsAppTrackers } from '../utils/tracker.js';
-  addWhatsAppTrackers();
+  import('../utils/tracker.js').then(({ addWhatsAppTrackers }) => {
+    addWhatsAppTrackers();
+  });
 </script>
