--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -608,6 +608,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </style>
 
 <script>
-  import { addWhatsAppTrackers } from '../utils/tracker.js';
-  addWhatsAppTrackers();
+  import('../utils/tracker.js').then(({ addWhatsAppTrackers }) => {
+    addWhatsAppTrackers();
+  });
 </script>
