[dyad] Memperbaiki gaya tombol dan optimasi gambar - wrote 4 file(s) + extra files edited outside of Dyad

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-  ---
+---
   import { SITE_CONFIG, SERVICES, MATERIALS } from '../utils/constants.js';
   ---
   
@@ -23,6 +23,8 @@
                   class="h-12 w-auto"
                   width="120"
                   height="48"
+                  loading="lazy"
+                  decoding="async"
                 />
               </div>
               <div>
@@ -246,4 +248,3 @@
       });
     </script>
   </footer>
-
