--- a/src/components/BaseLayout.astro
+++ b/src/components/BaseLayout.astro
@@ -139,8 +139,8 @@ const siteUrl = new URL(Astro.site);
     <link rel="dns-prefetch" href="//api.whatsapp.com" />
 
     <link rel="alternate" type="application/rss+xml" title="{meta.title} - RSS" href="/rss.xml" />
-    <link rel="alternate" hrefLang="id" href={meta.canonical} />
-    <link rel="alternate" hrefLang="x-default" href={meta.canonical} />
+    <link rel="alternate" hreflang="id" href={meta.canonical} />
+    <link rel="alternate" hreflang="x-default" href={meta.canonical} />
 
     {jsonLd && jsonLd.length > 0 && jsonLd.map(json => (
       <script type="application/ld+json" set:html={JSON.stringify(json)} />
@@ -167,9 +167,9 @@ const siteUrl = new URL(Astro.site);
     <script>
       (function(){
         try{
-          let cls=0; new PerformanceObserver(list=>{for (const e of list.getEntries()){if(!e.hadRecentInput){cls += e.value}}}).observe({type:'layout-shift', buffered:true});
-          new PerformanceObserver(list=>{const e=list.getEntries().pop(); if(e){console.log('[CWV] LCP', e.renderTime||e.loadTime)}}).observe({type:'largest-contentful-paint', buffered:true});
-          new PerformanceObserver(list=>{const e=list.getEntries().pop(); if(e){console.log('[CWV] FID', e.processingStart - e.startTime)}}).observe({type:'first-input', buffered:true});
+          let cls=0; new PerformanceObserver(list=>{for (const e of list.getEntries()){if(!(e as any).hadRecentInput){cls += (e as any).value}}}).observe({type:'layout-shift', buffered:true});
+          new PerformanceObserver(list=>{const e=list.getEntries().pop(); if(e){console.log('[CWV] LCP', (e as any).renderTime||(e as any).loadTime)}}).observe({type:'largest-contentful-paint', buffered:true});
+          new PerformanceObserver(list=>{const e=list.getEntries().pop(); if(e){console.log('[CWV] FID', (e as any).processingStart - (e as any).startTime)}}).observe({type:'first-input', buffered:true});
           window.addEventListener('visibilitychange', ()=>{ if(document.visibilityState==='hidden'){ console.log('[CWV] CLS', cls.toFixed(3)); }});
         }catch(err){}
       })();
